feat: Enhance footer with branding and update script loading; add theme toggle functionality

--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
 
     <footer>
         <h6>© 2025 KyraxAi
-            <br> All rights reserved.</h6>
+            <br> All rights reserved <br>
+        Powered by <br><span >
+            <a style="text-decoration: none; color: gold;" href="https://nasibkarimzade.vercel.app">nK</a>
+        </span></h6><br>
+
+
+             
 
     </footer>
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
     <script src="server.js"></script>
     <script>
         window.addEventListener('load', fg_load)
